inizio revisione esercizio

--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     </head>
     <body>
         <div class="container">
-            <div class="giallo"></div>
-            <aside class="rosa primo"></aside>
-            <aside class="rosa secondo"></aside>
-            <main></main>
-            <footer></footer>
+            <header></header>
+
         </div>
     </body>
 </html>
